<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">HistoryCleaner</string>

	<string name="url">URL</string>
	<string name="view_count">回数</string>
	<string name="delete">削除</string>
	<string name="list_empty">履歴はありません</string>
	<string name="all_check_label">すべて選択</string>
	<string name="all_uncheck_label">選択解除</string>
	<string name="cancel">キャンセル</string>
	<string name="not_checked">選択されていません</string>
	<string name="now_loading">読み込み中…</string>
	<string name="please_wait">しばらくお待ち下さい…</string>
	<string name="confirm_delete">以下の %1$,d 件を削除しますか?</string>

	<string name="checked_items_label">%1$,d 件選択済み</string>
	<string name="all_items_label">全 %1$,d 件中</string>
	<string name="checked_items_default_label">0 件選択済み</string>
	<string name="all_items_default_label">全 0 件中</string>

	<string name="sort_label">並べ替え</string>
<!--
	<string name="id_asc">ID</string>
	<string name="id_desc">ID(降順)</string>
-->
	<string name="title_asc">タイトル</string>
	<string name="title_desc">タイトル(降順)</string>
	<string name="url_asc">URL</string>
	<string name="url_desc">URL(降順)</string>
	<string name="date_asc">最終閲覧日</string>
	<string name="date_desc">最終閲覧日(降順)</string>
	<string name="visits_asc">表示回数</string>
	<string name="visits_desc">表示回数(降順)</string>
</resources>
