<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="right"
		>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:text="@string/all_items_label"
			android:textAppearance="@android:style/TextAppearance.Small"
			/>
		<TextView
			android:id="@+id/all_items"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_marginLeft="5dp"
			android:layout_marginRight="5dp"
			android:text="0"
			android:textAppearance="@android:style/TextAppearance.Small"
			/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:text="@string/unit_label"
			android:textAppearance="@android:style/TextAppearance.Small"
			/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:text="@string/of_label"
			android:textAppearance="@android:style/TextAppearance.Small"
			/>
		<TextView
			android:id="@+id/checked_items"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_marginLeft="5dp"
			android:layout_marginRight="5dp"
			android:text="0"
			android:textAppearance="@android:style/TextAppearance.Small"
			/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:text="@string/unit_label"
			android:textAppearance="@android:style/TextAppearance.Small"
			/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:text="@string/checked_items_label"
			android:textAppearance="@android:style/TextAppearance.Small"
			/>
	</LinearLayout>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="0dip"
		android:layout_weight="1"
		>
		<LinearLayout 
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			>
			<TextView 
				android:text="@string/url"
				android:textAppearance="@android:style/TextAppearance.Medium"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="0.7"
				android:gravity="center_vertical"
				/>
			<TextView 
				android:text="@string/view_count"
				android:textAppearance="@android:style/TextAppearance.Medium"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="0.15"
				android:gravity="center"
				/>
			<TextView 
				android:text="@string/delete"
				android:textAppearance="@android:style/TextAppearance.Medium"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="0.15"
				android:gravity="center"
				/>
		</LinearLayout>
		<ListView
			android:id="@android:id/list"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:choiceMode="multipleChoice"
			android:scrollbars="vertical"
			android:fastScrollEnabled="true"
			/>
		<!-- リストが空の時に表示 -->
		<TextView
			android:id="@android:id/empty"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:text="@string/list_empty"
			/>
	</LinearLayout>
	<Button
		android:id="@+id/del_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/delete"
		/>
</LinearLayout>
